# kernul

./: .gitignore  Cargo.toml  Makefile  boot.s  build.rs  gdt.s  grub.cfg  idt.s  linker.ld  rls.toml  x86_kernul.json
.cargo/: config
src/: gdt.rs  main.rs  vga_driver.rs
src/interrupts/: idt.rs
