[package]
name = "kernul"
version = "0.1.0"
authors = ["Julien Philippon <julien.philippon@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.5.0"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
